src/main/java/com/example/mailtrend/common/apiPayload/error/ErrorType.java
package com.example.mailtrend.common.apiPayload.error;

import org.springframework.http.HttpStatus;

public interface ErrorType {

    String name();

    HttpStatus getStatus();

    String getMessage();
}

